force-app/main/default/objects/Account/fields/I_RS_ABN__c.field-meta.xml
<CustomField>
    <fullName>I_RS_ABN__c</fullName>
    <label>ABN</label>
    <length>11</length>
    <type>Text</type>
</CustomField>