force-app/main/default/objects/Account/fields/I_RS_ARC_Id__c.field-meta.xml
<CustomField>
    <fullName>I_RS_ARC_Id__c</fullName>
    <label>ARC Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>