force-app/main/default/objects/Account/fields/I_RS_ARC_Publisher_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_ARC_Publisher_Name__c</fullName>
    <label>ARC Publisher Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>