force-app/main/default/objects/Account/fields/I_RS_Confidential__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Confidential__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hidden from Researcher Portal</label>
    <type>Checkbox</type>
</CustomField>