force-app/main/default/objects/Account/fields/I_RS_Default_HERDC_category__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Default_HERDC_category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default HERDC Category</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>HERDC_Category__c.I_RS_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>HERDC_Category__c</referenceTo>
    <relationshipLabel>Organisations</relationshipLabel>
    <relationshipName>Organisations</relationshipName>
    <type>Lookup</type>
</CustomField>