force-app/main/default/objects/Account/fields/I_RS_Display_name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Display_name__c</fullName>
    <description>meaningful department names for Profileholders, T2-972</description>
    <inlineHelpText>Full name based on HR Organisation Unit Description, maintained by Research Office, for display on Academic Profile</inlineHelpText>
    <label>Display name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>