force-app/main/default/objects/Account/fields/I_RS_End_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>