force-app/main/default/objects/Account/fields/I_RS_External_ID__c.field-meta.xml
<CustomField>
    <fullName>I_RS_External_ID__c</fullName>
    <description>Used as Unique Id from Source System(s)</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>