force-app/main/default/objects/Account/fields/I_RS_Finance_ABN__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Finance_ABN__c</fullName>
    <description>Not visible for users. This is for System Admin to check if the ABN received from Finance is different from ABN in PRIME.
Finance Integration will update this Field. If the value is different from &quot;I_RS_ABN__c&quot; admin may need to take action.</description>
    <externalId>true</externalId>
    <label>Finance ABN</label>
    <length>11</length>
    <type>Text</type>
</CustomField>