force-app/main/default/objects/Account/fields/I_RS_Finance_Status__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Finance_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finance Status</label>
    <type>Checkbox</type>
</CustomField>