force-app/main/default/objects/Account/fields/I_RS_Funder_Id__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Funder_Id__c</fullName>
    <description>Funder Id captured from RP</description>
    <label>RP Funder Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>