force-app/main/default/objects/Account/fields/I_RS_Funder_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Funder_Name__c</fullName>
    <description>Primary funder name from research professional</description>
    <label>Funder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>