force-app/main/default/objects/Account/fields/I_RS_Funder_Region__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Funder_Region__c</fullName>
    <description>Funder region received from Research professional</description>
    <label>Funder Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>