force-app/main/default/objects/Account/fields/I_RS_Funder_Region_Code__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Funder_Region_Code__c</fullName>
    <description>Funder region code received from Research Professional</description>
    <label>Funder Region Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>