force-app/main/default/objects/Account/fields/I_RS_Include_GST_In_Budgeting__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Include_GST_In_Budgeting__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When using Budget Calculator, apply GST to Non-Salary Items that are linked to this Organisation</description>
    <label>Include GST In Budgeting</label>
    <type>Checkbox</type>
</CustomField>