force-app/main/default/objects/Account/fields/I_RS_Industry_Classifications__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Industry_Classifications__c</fullName>
    <label>Industry Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture, Forestry And Fishing</fullName>
            </value>
            <value>
                <fullName>Mining</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Electricity, Gas, Water And Waste Services</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Wholesale Trade</fullName>
            </value>
            <value>
                <fullName>Retail Trade</fullName>
            </value>
            <value>
                <fullName>Accommodation And Food Services</fullName>
            </value>
            <value>
                <fullName>Transport Postal And Warehousing</fullName>
            </value>
            <value>
                <fullName>Information Media And Telecommunications</fullName>
            </value>
            <value>
                <fullName>Financial And Insurance Services</fullName>
            </value>
            <value>
                <fullName>Rental, Hiring And Real Estate Services</fullName>
            </value>
            <value>
                <fullName>Professional, Scientific And Technical Services</fullName>
            </value>
            <value>
                <fullName>Administrative And Support Services</fullName>
            </value>
            <value>
                <fullName>Public Administration And Safety</fullName>
            </value>
            <value>
                <fullName>Education And Training</fullName>
            </value>
            <value>
                <fullName>Health Care And Social Assistance</fullName>
            </value>
            <value>
                <fullName>Arts And Recreation Services</fullName>
            </value>
            <value>
                <fullName>Other Services</fullName>
            </value>
            <value>
                <fullName>Agriculture &amp; Horticulture</fullName>
                <isActive>false</isActive>
                <label>Agriculture &amp; Horticulture</label>
            </value>
            <value>
                <fullName>Allied Health</fullName>
                <isActive>false</isActive>
                <label>Allied Health</label>
            </value>
            <value>
                <fullName>Aquaculture</fullName>
                <isActive>false</isActive>
                <label>Aquaculture</label>
            </value>
            <value>
                <fullName>Arts / Creative Industries</fullName>
                <isActive>false</isActive>
                <label>Arts / Creative Industries</label>
            </value>
            <value>
                <fullName>Biomedical devices</fullName>
                <isActive>false</isActive>
                <label>Biomedical devices</label>
            </value>
            <value>
                <fullName>Biotechnology (health)</fullName>
                <isActive>false</isActive>
                <label>Biotechnology (health)</label>
            </value>
            <value>
                <fullName>Community services</fullName>
                <isActive>false</isActive>
                <label>Community services</label>
            </value>
            <value>
                <fullName>Defence</fullName>
                <isActive>false</isActive>
                <label>Defence</label>
            </value>
            <value>
                <fullName>Diagnostics</fullName>
                <isActive>false</isActive>
                <label>Diagnostics</label>
            </value>
            <value>
                <fullName>Disability</fullName>
                <isActive>false</isActive>
                <label>Disability</label>
            </value>
            <value>
                <fullName>Education</fullName>
                <isActive>false</isActive>
                <label>Education</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>