force-app/main/default/objects/Account/fields/I_RS_La_Trobe_Contact__c.field-meta.xml
<CustomField>
    <fullName>I_RS_La_Trobe_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>La Trobe Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Organisations</relationshipName>
    <type>Lookup</type>
</CustomField>