force-app/main/default/objects/Account/fields/I_RS_La_Trobe_is_a_participant__c.field-meta.xml
<CustomField>
    <fullName>I_RS_La_Trobe_is_a_participant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>La Trobe is a participant?</label>
    <type>Checkbox</type>
</CustomField>