force-app/main/default/objects/Account/fields/I_RS_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Legal_Name__c</fullName>
    <description>Legal Name  is the name stored in Finance application and will be updated by Finance by Nightly updates</description>
    <label>Name in Finance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>