force-app/main/default/objects/Account/fields/I_RS_Maximum_Allowed_On_Cost__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Maximum_Allowed_On_Cost__c</fullName>
    <defaultValue>0.3574</defaultValue>
    <label>Maximum Allowed On-Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>