force-app/main/default/objects/Account/fields/I_RS_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Mobile_Number__c</fullName>
    <label>Mobile Number</label>
    <type>Phone</type>
</CustomField>