force-app/main/default/objects/Account/fields/I_RS_Organisation_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Organisation_Contact_Email__c</fullName>
    <externalId>true</externalId>
    <label>Organisation Email</label>
    <type>Email</type>
</CustomField>