force-app/main/default/objects/Account/fields/I_RS_Organisation_Head__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Organisation_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Head of Organisation</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Organisations_Head</relationshipName>
    <type>Lookup</type>
</CustomField>