force-app/main/default/objects/Account/fields/I_RS_Other_Eligible_Orgs__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Other_Eligible_Orgs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other Eligible Orgs</label>
    <type>Checkbox</type>
</CustomField>