force-app/main/default/objects/Account/fields/I_RS_Part_of_La_Trobe__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Part_of_La_Trobe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Part of La Trobe</label>
    <type>Checkbox</type>
</CustomField>