force-app/main/default/objects/Account/fields/I_RS_Partnership_Level__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Partnership_Level__c</fullName>
    <label>Partnership Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strategic</fullName>
            </value>
            <value>
                <fullName>Precinct</fullName>
            </value>
            <value>
                <fullName>Emerging Strategic</fullName>
            </value>
            <value>
                <fullName>Significant</fullName>
            </value>
            <value>
                <fullName>Operational</fullName>
            </value>
            <value>
                <fullName>Emerging</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>