force-app/main/default/objects/Account/fields/I_RS_SAP_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>I_RS_SAP_Customer_Number__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Ensure this number is 10 digits; include the leading zeroes</inlineHelpText>
    <label>Finance Customer Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>