force-app/main/default/objects/Account/fields/I_RS_SAP_Vendor_Number__c.field-meta.xml
<CustomField>
    <fullName>I_RS_SAP_Vendor_Number__c</fullName>
    <label>SAP Vendor Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>