force-app/main/default/objects/Account/fields/I_RS_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Start_Date__c</fullName>
    <inlineHelpText>This represents the first engagement with La Trobe.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>