force-app/main/default/objects/Account/fields/I_RS_Status__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Status__c</fullName>
    <defaultValue>&apos;Active&apos;</defaultValue>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Proposed</fullName>
                <isActive>false</isActive>
                <label>Proposed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>