force-app/main/default/objects/Account/fields/I_RS_Trading_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Trading_Name__c</fullName>
    <label>Trading Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>