force-app/main/default/objects/Account/fields/I_RS_Type_of_Engagement_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Type_of_Engagement_Opportunities__c</fullName>
    <label>Types of Engagement Opportunities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advocacy and Influence</fullName>
            </value>
            <value>
                <fullName>Appointments (e.g. Adjunct, Chair, etc.)</fullName>
            </value>
            <value>
                <fullName>Capital Building and Master Plan - Capital raising</fullName>
            </value>
            <value>
                <fullName>Capital Building and Master Plan - Co-location (general)</fullName>
            </value>
            <value>
                <fullName>Capital Building and Master Plan - Joint ventures</fullName>
            </value>
            <value>
                <fullName>Capital Building and Master Plan - other(e.g. University City of the Future)</fullName>
            </value>
            <value>
                <fullName>Consultancy</fullName>
            </value>
            <value>
                <fullName>Contract research</fullName>
            </value>
            <value>
                <fullName>Joint Venture</fullName>
            </value>
            <value>
                <fullName>Non-research</fullName>
            </value>
            <value>
                <fullName>Philanthropy</fullName>
            </value>
            <value>
                <fullName>Public Good - Co-branding arrangements</fullName>
            </value>
            <value>
                <fullName>Public Good - Community outreach</fullName>
            </value>
            <value>
                <fullName>Public Good - Community engagement</fullName>
            </value>
            <value>
                <fullName>Public Good - other (e.g. lectures, events, knowledge dissemination)</fullName>
            </value>
            <value>
                <fullName>Public Good - Social, cultural and environmental activities</fullName>
            </value>
            <value>
                <fullName>Research - Contracts</fullName>
            </value>
            <value>
                <fullName>Research - Collaborative research</fullName>
            </value>
            <value>
                <fullName>Research - Co-location (Research &amp; Innovation Precinct)</fullName>
            </value>
            <value>
                <fullName>Research - Industry PhDs</fullName>
            </value>
            <value>
                <fullName>Research - Licencing / Spin-out / Commercialisation</fullName>
            </value>
            <value>
                <fullName>Research – other and Consulting</fullName>
            </value>
            <value>
                <fullName>Research - Research</fullName>
            </value>
            <value>
                <fullName>Research - scholarships</fullName>
            </value>
            <value>
                <fullName>Sponsorship</fullName>
            </value>
            <value>
                <fullName>Start-up / La Trobe Accelerator Program</fullName>
            </value>
            <value>
                <fullName>Teaching and Learning - Articulation partners</fullName>
            </value>
            <value>
                <fullName>Teaching and Learning - Courseware licencing</fullName>
            </value>
            <value>
                <fullName>Teaching and Learning - Executive Education</fullName>
            </value>
            <value>
                <fullName>Teaching and Learning - Field trip locations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>