force-app/main/default/objects/Account/fields/I_ST_Account_SubType__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Account_SubType__c</fullName>
    <description>Account management field</description>
    <label>Organisation Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>I_RS_Type_of_Organisation__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>I_ST_Account_SubType</valueSetName>
    </valueSet>
</CustomField>