force-app/main/default/objects/Account/fields/I_ST_Career_Network__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Career_Network__c</fullName>
    <description>Account management Field</description>
    <label>Career Network</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>I_ST_Career_Network</valueSetName>
    </valueSet>
</CustomField>