force-app/main/default/objects/Account/fields/I_ST_Current_Target_Enrolment__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Current_Target_Enrolment__c</fullName>
    <label>Current Target Enrolment</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>