force-app/main/default/objects/Account/fields/I_ST_Current_Target_Enrolment_Percent__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Current_Target_Enrolment_Percent__c</fullName>
    <label>Current Target Enrolment %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>