force-app/main/default/objects/Account/fields/I_ST_Latest_Case_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Latest_Case_Created_Date__c</fullName>
    <description>Added for IST-256 for tracking the last date a case was created for this account (educational institute)</description>
    <label>Latest Case Created Date</label>
    <type>DateTime</type>
</CustomField>