force-app/main/default/objects/Account/fields/I_ST_Perception_Best_University__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Perception_Best_University__c</fullName>
    <label>Perception: Best University</label>
    <length>100</length>
    <type>Text</type>
</CustomField>