force-app/main/default/objects/Account/fields/I_ST_Priority_Account_Flag__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Priority_Account_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Account management field</inlineHelpText>
    <label>Priority Account Flag</label>
    <type>Checkbox</type>
</CustomField>