force-app/main/default/objects/Account/fields/I_ST_RA_Classification__c.field-meta.xml
<CustomField>
    <fullName>I_ST_RA_Classification__c</fullName>
    <description>Account Management Field</description>
    <label>Remoteness Area (RA) Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inner Regional</fullName>
            </value>
            <value>
                <fullName>Major City</fullName>
            </value>
            <value>
                <fullName>Outer Regional</fullName>
            </value>
            <value>
                <fullName>Remote</fullName>
            </value>
            <value>
                <fullName>Very Remote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>