force-app/main/default/objects/Account/fields/I_ST_RightNow_ID__c.field-meta.xml
<CustomField>
    <fullName>I_ST_RightNow_ID__c</fullName>
    <description>External ID from RightNow for data migration</description>
    <externalId>true</externalId>
    <label>RightNow ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>