force-app/main/default/objects/Account/fields/I_ST_School_Category__c.field-meta.xml
<CustomField>
    <fullName>I_ST_School_Category__c</fullName>
    <description>Account Management Field</description>
    <label>School Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Partner School</fullName>
            </value>
            <value>
                <fullName>Account School</fullName>
            </value>
            <value>
                <fullName>Tech Supported School</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>