force-app/main/default/objects/Account/fields/I_ST_School_Partnership_Program__c.field-meta.xml
<CustomField>
    <fullName>I_ST_School_Partnership_Program__c</fullName>
    <description>Account Management</description>
    <label>School Partnership Program</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Outreach</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>