force-app/main/default/objects/Account/fields/I_ST_School_Type__c.field-meta.xml
<CustomField>
    <fullName>I_ST_School_Type__c</fullName>
    <description>Account Management Field</description>
    <label>School Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>I_ST_School_Type</valueSetName>
    </valueSet>
</CustomField>