force-app/main/default/objects/Account/fields/I_ST_SES_Classification__c.field-meta.xml
<CustomField>
    <fullName>I_ST_SES_Classification__c</fullName>
    <description>Created for account management</description>
    <label>SES Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>