force-app/main/default/objects/Account/fields/I_ST_share_with_guest__c.field-meta.xml
<CustomField>
    <fullName>I_ST_share_with_guest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Share this account to the guest user, for consultation scheduling</description>
    <label>Share with Guest</label>
    <type>Checkbox</type>
</CustomField>