force-app/main/default/objects/Account/fields/I_ST_SPP_Contact__c.field-meta.xml
<CustomField>
    <fullName>I_ST_SPP_Contact__c</fullName>
    <description>created for IST 317</description>
    <label>SPP Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>