force-app/main/default/objects/Account/fields/I_ST_Student_Gender__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Student_Gender__c</fullName>
    <description>Account Management</description>
    <label>Student Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Co-educational</fullName>
            </value>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>