force-app/main/default/objects/Account/fields/I_ST_VTAC_School_Code__c.field-meta.xml
<CustomField>
    <fullName>I_ST_VTAC_School_Code__c</fullName>
    <description>refer for 297</description>
    <label>VTAC School Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>