force-app/main/default/objects/Account/fields/I_ST_VTAC_School_Region__c.field-meta.xml
<CustomField>
    <fullName>I_ST_VTAC_School_Region__c</fullName>
    <description>Account Management Field</description>
    <label>VTAC School Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>I_ST_VTAC_school_region</valueSetName>
    </valueSet>
</CustomField>