force-app/main/default/objects/Account/fields/I_ST_Zone__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Zone__c</fullName>
    <description>Account Management Field</description>
    <label>Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Metro</fullName>
            </value>
            <value>
                <fullName>Regional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>