force-app/main/default/objects/Account/fields/L_PR_Alert__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field when checked will show an alert banner on top.</description>
    <label>Alert</label>
    <type>Checkbox</type>
</CustomField>