force-app/main/default/objects/Account/fields/L_PR_Alert_Reason__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Alert_Reason__c</fullName>
    <description>This field will have reason for checking the alert checkbox.</description>
    <label>Alert Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>